# EcuCamera

./: .gitignore  BUILD_INSTRUCTIONS.md  CONTRIBUTING.md  LOGCAT_SCRIPTS.md  README.md  build-rust.bat  build-rust.sh  build.gradle.kts  build.sh  build_debug.bat  build_debug.sh  clean-build.bat  env_setup.bat  gradle.properties  gradlew  logcat-app.bat  logcat-clear.bat  logcat-rust.bat  logcat-save.bat  logcat-save.sh  logcat.bat  settings.gradle.kts  setup_sdk.ps1  verify-libs.bat  verify-libs.sh  watch-engine.bat  watch-engine.sh
.github/workflows/: build-and-release.yml  dependabot.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ecu-bridge.cpp
app/src/main/java/id/xms/ecucamera/: MainActivity.kt
app/src/main/java/id/xms/ecucamera/bridge/: NativeBridge.kt
app/src/main/java/id/xms/ecucamera/data/: SettingsManager.kt
app/src/main/java/id/xms/ecucamera/engine/controller/: CaptureController.kt  ExposureController.kt  FlashController.kt  FocusController.kt  ZoomController.kt
app/src/main/java/id/xms/ecucamera/engine/core/: CameraControls.kt  CameraEngine.kt  CameraState.kt  ImageCaptureManager.kt  LensManager.kt  VideoCaptureManager.kt
app/src/main/java/id/xms/ecucamera/engine/pipeline/: PipelineValidator.kt  RequestManager.kt  SessionManager.kt
app/src/main/java/id/xms/ecucamera/engine/probe/: HardwareProbe.kt
app/src/main/java/id/xms/ecucamera/ui/components/: AutoFitSurfaceView.kt  BottomControlBar.kt  HistogramGraph.kt  HistogramView.kt  ManualControls.kt  ManualControlsSelector.kt  (+3 more)
app/src/main/java/id/xms/ecucamera/utils/: BitmapUtils.kt  GalleryManager.kt  WindowUtils.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/rust/: Cargo.toml
app/src/main/rust/.cargo/: config.toml
app/src/main/rust/src/: lib.rs
app/src/main/rust/src/processors/: focus.rs  luma.rs  mod.rs
gradle/: libs.versions.toml
mTools-logcat/linux-macOS/: logcat-all.sh  logcat-app.sh  logcat-filtered.sh  logcat-rust.sh  logcat.sh
mTools-logcat/windows/: logcat-all.bat  logcat-filtered.bat  logcat.bat
(+16 files in other folders)
